# colorizer_basic

./: .gitignore  CMakeLists.txt
include/: mb_colorizer_basic.h  mb_colorizer_basic_types.h
src/: lib.c
